[project]
name = "p2f_api"
version = "0.0.19"
description = "FastAPI based API for the Past to Future project."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "furl>=2.1.4",
    "openpyxl>=3.1.5",
    "p2f-pydantic>=0.0.2",
    "psycopg[binary,pool]>=3.2.8",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.38.0",
]
authors = [
    {name = "Garrett Speed", email = "g.t.speed@uu.nl"}
]
readme = {file = "README.md", content-type = "text/markdown"}


[project.urls]
Homepage = "https://past2future.org/"
Repository = "https://github.com/Past-to-Future-EU-Horizon/p2f-api.git"

[tool.uv.sources]
p2f-pydantic = { git = "https://github.com/Past-to-Future-EU-Horizon/p2f-pydantic" }

[tool.setuptools.packages.find]
where = ["./p2f_api/"]