[build-system]
requires = ["uv_build >= 0.10.7, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
namespace = true


[project]
name = "p2f_api"
version = "0.0.51"
description = "FastAPI based API for the Past to Future project."
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "furl>=2.1.4",
    "openpyxl>=3.1.5",
    "p2f-pydantic>=0.0.2",
    "psycopg[binary,pool]>=3.2.8",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.40",
    "starlette<1.0.0",
    "uvicorn[standard]>=0.38.0",
    "websockets>=16.0",
]
authors = [
    {name = "Garrett Speed", email = "g.t.speed@uu.nl"}
]
readme = {file = "README.md", content-type = "text/markdown"}


[project.urls]
Homepage = "https://past2future.org/"
Repository = "https://github.com/Past-to-Future-EU-Horizon/p2f-api.git"

[tool.uv.sources]
p2f-pydantic = { git = "https://github.com/Past-to-Future-EU-Horizon/p2f-pydantic" }
